# daysoff-app

./: .env.example  .gitignore  LICENSE  README.md  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: tauri-build.yml
src/: App.tsx  main.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/: AbsenceList.tsx  AllowanceRing.tsx  BookAbsenceDialog.tsx
src/components/app/: BrandMark.tsx  Layout.tsx  RequireAdmin.tsx  RequireAuth.tsx  YearSwitcher.tsx
src/components/calendar/: DayCell.tsx  MonthWidget.tsx  YearGrid.tsx
src/components/ui/: badge.tsx  button.tsx  dialog.tsx  input.tsx  label.tsx  select.tsx
src/lib/: api.ts  auth.tsx  branding.tsx  csv.ts  dates.ts  haptics.ts  queryClient.ts  types.ts  utils.ts
src/routes/: AdminUsers.tsx  Login.tsx  MyCalendar.tsx  Settings.tsx  Team.tsx
