[package]
name = "bv-vacation"
version = "0.1.0"
description = "BV Vacation — friction-free vacation day tracking"
edition = "2021"
license = "MIT"

[lib]
name = "bv_vacation_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
